log
Fri 23 Sep 2022 03:36:23 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
afffd1d
Fri 23 Sep 2022 04:07:30 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:1: error: expected ‘(’ before ‘}’ token
   60 | }
      | ^
      | (
Compilation failed
773bfe4
